[gd_scene load_steps=7 format=2]

[ext_resource path="res://Game.gd" type="Script" id=1]
[ext_resource path="res://things/JailCell.tscn" type="PackedScene" id=2]
[ext_resource path="res://things/Creature.tscn" type="PackedScene" id=3]
[ext_resource path="res://Tileset.tres" type="TileSet" id=4]
[ext_resource path="res://Law.tscn" type="PackedScene" id=5]
[ext_resource path="res://tiles/blank.png" type="Texture" id=6]

[node name="Game" type="Node" index="0"]

script = ExtResource( 1 )
JailCell = ExtResource( 2 )
Creature = ExtResource( 3 )

[node name="FloorMapPrim" type="TileMap" parent="." index="0"]

mode = 0
tile_set = ExtResource( 4 )
cell_size = Vector2( 16, 16 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = false
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 1
collision_mask = 1
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray(  )
_sections_unfolded = [ "Cell" ]

[node name="Law" parent="." index="1" instance=ExtResource( 5 )]

position = Vector2( 672, 208 )

[node name="CanvasLayer" type="CanvasLayer" parent="." index="2"]

layer = -1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )

[node name="Background" type="Sprite" parent="CanvasLayer" index="0"]

texture = ExtResource( 6 )

[node name="FloorMapSeco" type="TileMap" parent="." index="3"]

mode = 0
tile_set = ExtResource( 4 )
cell_size = Vector2( 16, 16 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = false
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 1
collision_mask = 1
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray(  )
_sections_unfolded = [ "Cell" ]

[node name="WallMapPrim" type="TileMap" parent="." index="4"]

mode = 0
tile_set = ExtResource( 4 )
cell_size = Vector2( 16, 16 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = false
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 1
collision_mask = 1
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray( 917543, 7, 0, 917547, 7, 0, 983079, 7, 0, 983083, 7, 0, 1048615, 7, 0, 1048619, 7, 0, 1114151, 7, 0, 1114155, 7, 0, 1179687, 7, 0, 1179691, 7, 0, 1245223, 7, 0, 1245227, 7, 0, 1310759, 7, 0, 1310763, 7, 0, 1376295, 7, 0, 1376299, 7, 0 )
_sections_unfolded = [ "Cell", "Visibility" ]

[node name="Creature" parent="WallMapPrim" index="0" instance=ExtResource( 3 )]

position = Vector2( 656, 208 )

[node name="WallMapSeco" type="TileMap" parent="." index="5"]

mode = 0
tile_set = ExtResource( 4 )
cell_size = Vector2( 16, 16 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = false
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 1
collision_mask = 1
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray( 917543, 8, 0, 917547, 8, 0, 983079, 8, 0, 983083, 8, 0, 1048615, 8, 0, 1048619, 8, 0, 1114151, 8, 0, 1114155, 8, 0, 1179687, 8, 0, 1179691, 8, 0, 1245223, 8, 0, 1245227, 8, 0, 1310759, 8, 0, 1310763, 8, 0, 1376295, 8, 0, 1376299, 8, 0 )
_sections_unfolded = [ "Cell" ]


